<resources>
    <string name="app_name">Trip Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="TripName">Trip name</string>
    <string name="StartPoint">Start Point</string>
    <string name="EndPoint">End Point</string>
    <string name="DateAndTime"><![CDATA[Date & Time]]></string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="AddTrip">Add trip</string>

    <string-array name="trip_types">
        <item>One way</item>
        <item>Round trip</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="History">History</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Sync">Sync</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user? Register Now</string>
    <string name="use_other_method">______ use other method ______</string>
    <string name="user_name">User Name</string>
    <string name="register">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>

    <string name="please_enter_user_name">Please enter User Name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="error">"Error : "</string>
    <string name="creating_new_account">Creating new account</string>
    <string name="please_wait">Please wait...</string>
    <string name="signing_in">Signing in</string>
    <string name="logged_is_successful">Logged is Successful</string>
    <string name="logged_is_unsuccessful">Logged is Unsuccessful</string>
    <string name="you_are_not_registered">You are not registered please register</string>

    <string name="StartTrip">Start trip</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="note">note</string>
    <string name="edit">edit</string>
    <string name="add_notes">Add Notes</string>
    <string name="view_notes">View Notes</string>
    <string name="sync_success">Data sync successfully</string>
    <string name="sync_faild">Data sync is unsuccessfully</string>
    <string name="sync_data">Sync Data</string>

    <string name="notes">Notes</string>
    <string name="no_notes">No Notes</string>
    <string name="close">Close</string>

    <string name="Save">Save</string>
    <string name="trip_reminder">Trip Reminder</string>
    <string name="password_validation">Password should be 6 character or more</string>


</resources>