<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/Upcoming" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/History" />
        <item
            android:id="@+id/historyMap"
            android:icon="@drawable/ic_map"
            android:title="Map" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_sync"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/Sync" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logut"
            android:title="@string/logout"/>
    </group>
</menu>