<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:layout_gravity="center"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_map"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/topguid"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topguid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:padding="12dp"
            app:contentPadding="24dp"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/topguid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">
                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user_name"
                    android:drawablePadding="8dp"
                    android:layout_margin="8dp"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/design_default_color_secondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:layout_margin="8dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/design_default_color_secondary"
                    app:layout_constraintTop_toBottomOf="@id/edtUserName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:layout_margin="8dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/design_default_color_secondary"
                    app:layout_constraintTop_toBottomOf="@id/edtEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="24sp"
                    android:layout_margin="12dp"
                    android:background="@drawable/button_bg"
                    app:backgroundTint="@null"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/txtHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_margin="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                    android:textColor="@color/design_default_color_secondary"
                    android:text="@string/already_have_an_account"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/txtUseOtherMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_other_method"
            android:textColor="@color/white"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"
            android:layout_margin="12dp"
            app:backgroundTint="@null"
            android:background="@color/design_default_color_secondary_variant"
            app:layout_constraintTop_toBottomOf="@id/txtUseOtherMethod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>