<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="12dp"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            android:padding="12dp"
            app:civ_border_color="@color/purple_500"
            app:civ_border_width="1dp"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/topguid"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topguid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="229dp" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="24dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/topguid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_bg">
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@id/edtEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="24sp"
                    android:textColor="@color/purple_500"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="sans-serif-condensed-medium"
                    app:backgroundTint="@null"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/txtUseOtherMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_other_method"
                    android:textColor="@color/purple_700"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/txtUseOtherMethod"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <TextView
                    android:id="@+id/txtNewUser"
                    android:textSize="18dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:padding="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin"
                    android:textColor="@color/purple_700"
                    android:text="@string/new_user"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>